Added text explationation

--- a/Yasmine_CPM_software.ipynb
+++ b/Yasmine_CPM_software.ipynb
@@ -30,6 +30,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Set up tasks with duration and define depencies"
+      ],
+      "metadata": {
+        "id": "qbyXs-N5Cy3x"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
@@ -87,6 +96,15 @@
         "G.add_nodes_from(tasks)\n",
         "G.add_edges_from(dependencies)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Set up arbitary positions for nodes"
+      ],
+      "metadata": {
+        "id": "Kt-okLNUC-2A"
+      }
     },
     {
       "cell_type": "code",
